--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello React</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body style="margin: 0;">
     <div id="hello"></div>
     <script src="bundle.js"></script>
   </body>
