--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
     <title>Hello React</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500" rel="stylesheet" type="text/css">
+  <style type="text/css">
+      a {
+          color: #4078c0;
+          text-decoration: none;
+      }
+  </style>
   </head>
   <body style="margin: 0;">
     <div id="hello"></div>
