--- a/client-vue/index.html
+++ b/client-vue/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <app></app>
+   <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
